--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,12 +10,7 @@
         <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
           <mat-icon>email</mat-icon>
           <mat-form-field fxFlex>
-            <input
-              matInput
-              placeholder="E-mail"
-              aria-label="E-mail"
-              formControlName="email"
-              #email />
+            <input matInput placeholder="E-mail" aria-label="E-mail" formControlName="email" #email />
             <mat-error [input]="email" [group]="loginForm" appFieldError="invalid">
             </mat-error>
           </mat-form-field>
@@ -23,31 +18,19 @@
         <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
           <mat-icon matPrefix>vpn_key</mat-icon>
           <mat-form-field fxFlex>
-            <input
-              matInput
-              placeholder="Password"
-              aria-label="Password"
-              type="password"
-              formControlName="password"
+            <input matInput placeholder="Password" aria-label="Password" type="password" formControlName="password"
               #password />
             <mat-hint>Minimum 8 characters</mat-hint>
-            <mat-error
-              [input]="password"
-              [group]="loginForm"
-              [appFieldError]="['required', 'minlength', 'maxlength']">
+            <mat-error [input]="password" [group]="loginForm" [appFieldError]="['required', 'minlength', 'maxlength']">
             </mat-error>
           </mat-form-field>
         </div>
         <div fxLayout="row" class="top-pad">
           @if (loginError) {
-            <div class="mat-caption error">{{ loginError }}</div>
+          <div class="mat-caption error">{{ loginError }}</div>
           }
           <div class="flex-spacer"></div>
-          <button
-            mat-raised-button
-            type="submit"
-            color="primary"
-            [disabled]="loginForm.invalid">
+          <button mat-raised-button type="submit" color="primary" [disabled]="loginForm.invalid">
             Login
           </button>
         </div>
@@ -58,70 +41,60 @@
         <span>Authentication Mode: </span><i>{{ authMode }}</i>
       </div>
       @if (authMode !== AuthMode.InMemory) {
-        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
-          <span>Demo Credentials: </span
-          ><button
-            mat-button
-            (click)="
+      <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+        <span>Demo Credentials: </span><button mat-button (click)="
               this.loginForm.patchValue({
                 email: 'duluca@gmail.com',
                 password: 'l0l1pop!!'
               })
             ">
-            Fill
-          </button>
-        </div>
+          Fill
+        </button>
+      </div>
       }
       @if (authMode === AuthMode.InMemory) {
-        <mat-accordion>
-          <mat-expansion-panel>
-            <mat-expansion-panel-header>
-              <mat-panel-title> Fake Login Info </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-grid-list cols="3" rowHeight="48px" role="list">
-              <mat-grid-tile [colspan]="3" role="listitem" style="background: pink">
-                Use any 8 character string as password
+      <mat-accordion>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title> Fake Login Info </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-grid-list cols="3" rowHeight="48px" role="list">
+            <mat-grid-tile [colspan]="3" role="listitem" style="background: pink">
+              Use any 8 character string as password
+            </mat-grid-tile>
+            <mat-grid-tile>
+              <mat-grid-tile-header>Role</mat-grid-tile-header>
+            </mat-grid-tile>
+            <mat-grid-tile [colspan]="2">
+              <mat-grid-tile-header>E-mail</mat-grid-tile-header>
+            </mat-grid-tile>
+            @for (role of roles; track role; let oddRow = $odd) {
+            <div>
+              <mat-grid-tile role="listitem" [style.background]="oddRow ? 'lightGray' : 'white'">
+                {{ role }}
               </mat-grid-tile>
-              <mat-grid-tile>
-                <mat-grid-tile-header>Role</mat-grid-tile-header>
-              </mat-grid-tile>
-              <mat-grid-tile [colspan]="2">
-                <mat-grid-tile-header>E-mail</mat-grid-tile-header>
-              </mat-grid-tile>
-              @for (role of roles; track role; let oddRow = $odd) {
-                <div>
-                  <mat-grid-tile
-                    role="listitem"
-                    [style.background]="oddRow ? 'lightGray' : 'white'">
-                    {{ role }}
-                  </mat-grid-tile>
-                  <mat-grid-tile
-                    [colspan]="2"
-                    role="listitem"
-                    [style.background]="oddRow ? 'lightGray' : 'white'">
-                    <div fxFlex fxLayoutAlign="end center">
-                      @if (role.toLowerCase() === 'none') {
-                        <div>Any &#64;test.com email</div>
-                      } @else {
-                        {{ role.toLowerCase() }}&#64;test.com
-                      }
-                      <button
-                        mat-button
-                        (click)="
+              <mat-grid-tile [colspan]="2" role="listitem" [style.background]="oddRow ? 'lightGray' : 'white'">
+                <div fxFlex fxLayoutAlign="end center">
+                  @if (role.toLowerCase() === 'none') {
+                  <div>Any &#64;test.com email</div>
+                  } @else {
+                  {{ role.toLowerCase() }}&#64;test.com
+                  }
+                  <button mat-button (click)="
                           this.loginForm.patchValue({
                             email: role.toLowerCase() + '@test.com',
                             password: 'whatever'
                           })
                         ">
-                        Fill
-                      </button>
-                    </div>
-                  </mat-grid-tile>
+                    Fill
+                  </button>
                 </div>
-              }
-            </mat-grid-list>
-          </mat-expansion-panel>
-        </mat-accordion>
+              </mat-grid-tile>
+            </div>
+            }
+          </mat-grid-list>
+        </mat-expansion-panel>
+      </mat-accordion>
       }
     </mat-card-content>
   </mat-card>
